Service-Nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mirror-dr-svc
  namespace: jazz-amq-cluster
spec:
  type: NodePort
  selector:
      broker-cluster: amq-cluster
  ports:
    - name: amqp
      port: 61616            # broker acceptor port
      targetPort: 61616
      nodePort: 31616        # NodePort in the range 30000-32767
