Route-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-acceptor-svc
spec:
  ports:
    - protocol: TCP
      port: 61626
      targetPort: 61616
  selector:
    broker-cluster: amq-cluster
  type: ClusterIP
  sessionAffinity: None
  publishNotReadyAddresses: true
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ext-acceptor-svc-rte
spec:
  port:
    targetPort: 61616
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  to:
    kind: Service
    name: ext-acceptor-svc
